# DigitalGuitarEffect

./: CMakeLists.txt  README.md  main.py  requirements.txt
lib/portaudio/: portaudio.lib
src/: readInputPyAudio.py  readInputSoundDevice.py
src/native/: CMakeLists.txt  IAudioCallbackWrapper.h  IEffect.h  ISettings.h  Settings.h  StereoSample.h  cInterface.cpp  cInterface.h  device.h  hello.cpp  hello.h  mainProgram.cpp  mainProgram.h  portaudioWrapper.cpp  portaudioWrapper.h
src/native/Effects/: IEffect.h  delay.cpp  delay.h  overdrive.cpp  overdrive.h
src/native/Effects/Chorus/: Chorus.cpp  Chorus.h
src/native/Effects/Chorus/Algorithms/: SimpleChorus.h
src/native/Effects/Delay/: Delay.cpp  Delay.h
src/native/Effects/Delay/Algorithms/: CombFilter.h  IAlgorithm.h  MultiTap.h  PingPong.h  RecursiveCombFilter.h
src/native/Effects/DelayAlgorithms/: CombFilter.h  IDelayAlgorithms.h  RecursiveCombFilter.h
src/native/Effects/Modulation/: Modulation.cpp  Modulation.h
src/native/Effects/Modulation/Algorithms/: Chorus.h  Flanger.h  IAlgorithm.h
src/native/Effects/Modulation/LFO/: ILFO.h  SinusGenerator.h  SquareGenerator.h  TriangleGenerator.h
src/native/Effects/Overdrive/: Overdrive.cpp  Overdrive.h
src/native/Effects/Overdrive/Algorithms/: Exponential.h  HardClipping.h  HyperbolicTangent.h  IAlgorithm.h
src/native/Effects/OverdriveAlgorithms/: HardClipping.h  HyperbolicTangent.h  IGain.h  IMinMaxValue.h  IOverdriveAlgorithm.h
src/python/: CMakeLists.txt  ChooseEffectDialog.py  CppLibWrapper.py  Effect.py  MainWindow.py  (+2 more)
test/: CMakeLists.txt  TestUtils.cpp  TestUtils.h  exampleTest.cpp
test/Effects/: DelayTest.cpp  OverdriveTest.cpp  RecursiveCombFilterTest.cpp
test/Effects/Chorus/: ChorusTest.cpp
test/Effects/Chorus/Algorithms/: SimpleChorusTest.cpp
test/Effects/Chorus/Algorithms/LFO/: TriangleGeneratorTest.cpp
test/Effects/Delay/: DelayTest.cpp
test/Effects/Delay/Algorithms/: RecursiveCombFilterTest.cpp
test/Effects/Modulation/: ModulationTest.cpp
test/Effects/Modulation/Algorithms/: ChorusTest.cpp
test/Effects/Modulation/LFO/: TriangleGeneratorTest.cpp
test/Effects/Overdrive/: OverdriveTest.cpp
test/Effects/Overdrive/Algorithms/: HardClippingTest.cpp  HyperbolicTangentTest.cpp
test/Effects/OverdriveAlgorithms/: HardClippingTest.cpp  HyperbolicTangentTest.cpp
(+5 files in other folders)
